--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,7 +3,8 @@
     "builds": [
         {
             "src": "index.js",
-            "use": "@vercel/python"
+            "use": "@vercel/node",
+            "config": { "includeFiles": ["dist/**"] }
         }
     ],
     "routes": [
